--- a/_config.yml
+++ b/_config.yml
@@ -3,10 +3,10 @@
 # -----------------------------------------------------------------------------
 
 title: blank # the website title (if blank, full name will be used instead)
-first_name: Jindong
+first_name: Renhai
 middle_name: 
 last_name: Wang
-email: jindong.wang@microsoft.com
+email: wangrh1008@gmail.com
 description: > # the ">" symbol means to ignore newlines until "footer_text:"
   A simple, whitespace theme for academics. Based on [*folio](https://github.com/bogoli/-folio) design.
 footer_text: >
@@ -15,7 +15,7 @@ footer_text: >
 
 lang: en # the language of your site (for example: en, fr, cn, ru, etc.)
 icon: 🐼 # the emoji used as the favicon
-url: jindongwang.github.io #https://alshedivat.github.io # the base hostname & protocol for your site
+url: wangrh1008.github.io #https://alshedivat.github.io # the base hostname & protocol for your site
 baseurl:  # the subpath of your site, e.g. /blog/
 last_updated: true # set to true if you want to display last updated in the footer
 impressum_path:  # set to path to include impressum link in the footer, use the same path as permalink in a page, helps to conform with EU GDPR
@@ -49,12 +49,12 @@ og_image: # The site-wide (default for all links) Open Graph preview image
 # Social integration
 # -----------------------------------------------------------------------------
 
-github_username: jindongwang # your GitHub user name
+github_username: wangrh1008 # your GitHub user name
 gitlab_username: # your GitLab user name
 twitter_username: # your Twitter handle
 linkedin_username: # your LinkedIn user name
-scholar_userid: hBZ_tKsAAAAJ # your Google Scholar ID
-orcid_id: # your ORCID ID
+scholar_userid:  # your Google Scholar ID
+orcid_id: 0000-0003-4539-9273 # your ORCID ID
 medium_username: # your Medium username
 quora_username: # your Quora username
 publons_id: # your ID on Publons
@@ -71,7 +71,7 @@ rss_icon: true
 contact_note: 
   #You can even add a little note about which of these is the best way to reach you.
 
-google_analytics: G-LRLQJKW7E9 # out your google-analytics code
+google_analytics:  # out your google-analytics code
 panelbear_analytics: XXXXXXXXX # panelbear analytics site ID
 
 # -----------------------------------------------------------------------------
@@ -183,7 +183,7 @@ jekyll-archives:
 scholar:
 
   last_name: Wang
-  first_name: Jindong
+  first_name: Renhai
 
   style: apa
   locale: en
